--- a/app/src/main/res/layout/activity_place_offer_overview.xml
+++ b/app/src/main/res/layout/activity_place_offer_overview.xml
@@ -7,12 +7,11 @@
     tools:context=".PlaceOfferOverviewActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/placeoffer_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
