Add all necessary activities for shopping list

--- a/app/src/main/res/layout/shopping_list_item_view.xml
+++ b/app/src/main/res/layout/shopping_list_item_view.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ShoppingItemOverviewActivity">
+    android:layout_height="wrap_content"
+    tools:layout_editor_absoluteY="25dp">
 
     <TextView
-        android:id="@+id/shoppingitem_name"
-        android:layout_width="wrap_content"
+        android:id="@+id/shoppingitem_tv"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
