--- a/app/src/main/res/layout/shopping_list_item_view.xml
+++ b/app/src/main/res/layout/shopping_list_item_view.xml
@@ -7,12 +7,33 @@
     tools:layout_editor_absoluteY="25dp">
 
     <TextView
-        android:id="@+id/shoppingitem_tv"
+        android:id="@+id/shoppinglist_item_name"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/shoppinglist_item_status"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <CheckBox
+        android:id="@+id/shoppinglist_item_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/shoppinglist_item_quantity"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/shoppinglist_item_status"
+        app:layout_constraintTop_toBottomOf="@+id/shoppinglist_item_name" />
 
 </android.support.constraint.ConstraintLayout>
