--- a/app/src/main/res/layout/activity_shopping_item_overview.xml
+++ b/app/src/main/res/layout/activity_shopping_item_overview.xml
@@ -5,6 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/shoppingitem_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
     <TextView
         android:id="@+id/shoppingitem_category"
         android:layout_width="0dp"
@@ -13,8 +22,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/shoppingitem_toolbar" />
 
     <TextView
         android:id="@+id/shoppingitem_name"
@@ -26,7 +36,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/shoppingitem_category"/>
+        app:layout_constraintTop_toBottomOf="@+id/shoppingitem_category" />
 
     <TextView
         android:id="@+id/shoppingitem_quantity"
