--- a/app/src/main/res/layout/activity_new_place_offer.xml
+++ b/app/src/main/res/layout/activity_new_place_offer.xml
@@ -5,6 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/new_placeoffer_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
     <EditText
         android:id="@+id/new_placeoffer_location"
         android:layout_width="0dp"
@@ -16,8 +25,9 @@
         android:hint="@string/new_placeoffer_location"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/new_placeoffer_toolbar" />
 
     <EditText
         android:id="@+id/new_placeoffer_capacity"
