--- a/app/src/main/res/layout/activity_edit_place_offer.xml
+++ b/app/src/main/res/layout/activity_edit_place_offer.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/new_shoppingitem_appbar"
+        android:id="@+id/edit_placeoffer_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/new_shoppingitem_toolbar"
+            android:id="@+id/edit_placeoffer_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -22,86 +22,68 @@
     </android.support.design.widget.AppBarLayout>
 
     <EditText
-        android:id="@+id/new_shoppingitem_category"
+        android:id="@+id/edit_placeoffer_location"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_shoppingitem_category"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_appbar" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_placeoffer_appbar" />
 
     <EditText
-        android:id="@+id/new_shoppingitem_name"
+        android:id="@+id/edit_placeoffer_capacity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_shoppingitem_name"
-        android:inputType="textPersonName"
+        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_category" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_placeoffer_location" />
 
     <EditText
-        android:id="@+id/new_shoppingitem_description"
+        android:id="@+id/edit_placeoffer_notes"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_shoppingitem_description"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_name" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_placeoffer_capacity" />
 
     <EditText
-        android:id="@+id/new_shoppingitem_quantity"
+        android:id="@+id/edit_placeoffer_price"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_shoppingitem_quantity"
-        android:inputType="numberSigned"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_description" />
-
-    <EditText
-        android:id="@+id/new_shoppingitem_price"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="@string/new_shoppingitem_price"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_quantity" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_placeoffer_notes" />
 
     <Button
-        android:id="@+id/add_shoppingitem"
+        android:id="@+id/edit_placeoffer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/add_shoppingitem"
+        android:text="@string/edit_placeoffer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_price" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_placeoffer_price" />
 
 </android.support.constraint.ConstraintLayout>
