--- a/app/src/main/res/layout/activity_edit_shopping_item.xml
+++ b/app/src/main/res/layout/activity_edit_shopping_item.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".EditShoppingItemActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/new_shoppingitem_appbar"
+        android:id="@+id/edit_shoppingitem_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/new_shoppingitem_toolbar"
+            android:id="@+id/edit_shoppingitem_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -22,86 +23,81 @@
     </android.support.design.widget.AppBarLayout>
 
     <EditText
-        android:id="@+id/new_shoppingitem_category"
+        android:id="@+id/edit_shoppingitem_category"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_shoppingitem_category"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_appbar" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_shoppingitem_appbar" />
 
     <EditText
-        android:id="@+id/new_shoppingitem_name"
+        android:id="@+id/edit_shoppingitem_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_shoppingitem_name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_category" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_shoppingitem_category" />
 
     <EditText
-        android:id="@+id/new_shoppingitem_description"
+        android:id="@+id/edit_shoppingitem_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_shoppingitem_description"
         android:inputType="textMultiLine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_name" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_shoppingitem_name" />
 
     <EditText
-        android:id="@+id/new_shoppingitem_quantity"
+        android:id="@+id/edit_shoppingitem_quantity"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_shoppingitem_quantity"
         android:inputType="numberSigned"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_description" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_shoppingitem_description" />
 
     <EditText
-        android:id="@+id/new_shoppingitem_price"
+        android:id="@+id/edit_shoppingitem_price"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="@string/new_shoppingitem_price"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_quantity" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_shoppingitem_quantity" />
 
     <Button
-        android:id="@+id/add_shoppingitem"
+        android:id="@+id/edit_shoppingitem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/add_shoppingitem"
+        android:text="@string/edit_shoppingitem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_price" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_shoppingitem_price" />
 
 </android.support.constraint.ConstraintLayout>
