--- a/app/src/main/res/layout/activity_new_place_offer.xml
+++ b/app/src/main/res/layout/activity_new_place_offer.xml
@@ -79,7 +79,7 @@
         app:layout_constraintTop_toBottomOf="@+id/new_placeoffer_notes" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/add_placeoffer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
