--- a/app/src/main/res/layout/activity_new_shopping_item.xml
+++ b/app/src/main/res/layout/activity_new_shopping_item.xml
@@ -21,18 +21,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <EditText
+    <Spinner
         android:id="@+id/new_shoppingitem_category"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
-        android:hint="@string/new_shoppingitem_category"
-        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/new_shoppingitem_appbar" />
 
