--- a/app/src/main/res/layout/activity_add_new_event.xml
+++ b/app/src/main/res/layout/activity_add_new_event.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddNewEventActivity">
+    tools:context=".activity.AddNewEventActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/add_new_event_toolbar"
