--- a/app/src/main/res/layout/activity_edit_shopping_item.xml
+++ b/app/src/main/res/layout/activity_edit_shopping_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EditShoppingItemActivity">
+    tools:context=".activity.EditShoppingItemActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/edit_shoppingitem_appbar"
