--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="rs.ac.uns.ftn.pma.event_organizer.LoginActivity">
+    tools:context="rs.ac.uns.ftn.pma.event_organizer.activity.LoginActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/login_appbar"
