--- a/app/src/main/res/layout/people_view.xml
+++ b/app/src/main/res/layout/people_view.xml
@@ -5,12 +5,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:layout_editor_absoluteY="50dp">
+    tools:layout_editor_absoluteY="50dp"
+    android:layout_marginEnd="16dp"
+    android:layout_marginStart="16dp">
 
     <TextView
         android:id="@+id/people_user_email"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="status"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
