--- a/app/src/main/res/layout/people_view.xml
+++ b/app/src/main/res/layout/people_view.xml
@@ -16,10 +16,14 @@
 
         />
 
-    <TextView
+    <ImageButton
+        android:id="@+id/moreImageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="status"
+        android:layout_alignParentRight="true"
+        android:background="@null"
+        android:src="@android:drawable/presence_online"
+        android:layout_centerVertical="true"
         app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
