--- a/app/src/main/res/layout/activity_invitation_list_view.xml
+++ b/app/src/main/res/layout/activity_invitation_list_view.xml
@@ -13,7 +13,8 @@
             android:layout_marginTop="5dp"
             android:src="@drawable/background" />
 
-        <LinearLayout android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
