--- a/app/src/main/res/layout/fragment_people_overview.xml
+++ b/app/src/main/res/layout/fragment_people_overview.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@null"
-            android:src="@android:drawable/ic_input_add"
+            android:src="@drawable/ic_add_black_24dp"
             />
 </LinearLayout>
 
