--- a/app/src/main/res/menu/base_menu.xml
+++ b/app/src/main/res/menu/base_menu.xml
@@ -2,14 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_placeoffer_edit"
+        android:id="@+id/action_profile_edit"
         android:icon="@drawable/ic_edit_black_24dp"
         android:title="@string/action_edit"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/action_placeoffer_settings"
+        android:id="@+id/action_profile_settings"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_profile_logout"
+        android:title="@string/logout"
+        app:showAsAction="never" />
 </menu>
