--- a/app/src/main/res/layout/activity_invitations.xml
+++ b/app/src/main/res/layout/activity_invitations.xml
@@ -28,7 +28,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="?attr/actionBarSize">
 
         <ListView
             android:id="@+id/invitations_list"
